cmake_minimum_required(VERSION 3.25)
project(My_Lab_Manual_all_codes)

set(CMAKE_CXX_STANDARD 14)

add_executable(My_Lab_Manual_all_codes
        1_male_female_cook_code.cpp 2_laptop_Ram_model.cpp 3_length_width_rectangle.cpp 4_Assignment_code_no_1.cpp 4_Assignment_code_no_1.cpp 5_Assignment_code_no_2.cpp 6_Assignment_code_no_3.cpp 7_Assignment_code_no_4.cpp 8_class_cir_area.cpp 9_complex.cpp)
